Allow artifacts restoration step to fail

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         name: target
         path: target
+      continue-on-error: true
     - name: Build project
       run: cargo build
     - name: Archive build artifacts
