Upload binary during build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,3 +26,15 @@ jobs:
       with:
         name: target
         path: target
+    - name: Archive binary (Unix)
+      if: matrix.os != windows-latest
+      uses: actions/upload-artifact@v1
+        with:
+          name: licensor
+          path: target/licensor
+    - name: Archive binary (Windows)
+      if: matrix.os == windows-latest
+      uses: actions/upload-artifact@v1
+        with:
+          name: licensor.exe
+          path: target/licensor.exe
