--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,13 +27,13 @@ jobs:
         name: target
         path: target
     - name: Archive binary (Unix)
-      if: matrix.os != windows-latest
+      if: matrix.os != 'windows-latest'
       uses: actions/upload-artifact@v1
       with:
         name: licensor
         path: target/licensor
     - name: Archive binary (Windows)
-      if: matrix.os == windows-latest
+      if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v1
       with:
         name: licensor.exe
