--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,10 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: licensor
-        path: target/licensor
+        path: target/debug/licensor
     - name: Archive binary (Windows)
       if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v1
       with:
         name: licensor.exe
-        path: target/licensor.exe
+        path: target/debug/licensor.exe
