--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,18 @@ exclude = [
 [dependencies]
 chrono = "0.4.9"
 lazy_static = "1.4.0"
+[dependencies.flate2]
+version = "1.0.11"
+default-features = false
+features = ["rust_backend"]
 
 [build-dependencies]
 reqwest = "0.9.20"
 serde_json = "1.0.40"
+[build-dependencies.flate2]
+version = "1.0.11"
+default-features = false
+features = ["rust_backend"]
 [build-dependencies.serde]
 version = "1.0.101"
 features = ["derive"]
