--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,38 +10,28 @@ readme = "README.md"
 keywords = ["license", "cli"]
 categories = ["command-line-utilities"]
 edition = "2018"
-build = "build.rs"
 exclude = [
-    "/target",
+    "**/target/",
     "**/*.rs.bk",
     ".idea/",
     ".github/",
 ]
 
+[workspace]
+members = [
+    "licensor_codegen",
+    "licensor_common",
+    "licensor_fetch"
+]
+
 [dependencies]
+calm_io = "0.1.0"
 chrono = "0.4.9"
-lazy_static = "1.4.0"
+phf = "0.7.23"
+structopt = "0.3.2"
 [dependencies.flate2]
 version = "1.0.11"
 default-features = false
 features = ["rust_backend"]
-
-[build-dependencies]
-serde_json = "1.0.40"
-[build-dependencies.flate2]
-version = "1.0.11"
-default-features = false
-features = ["rust_backend"]
-[build-dependencies.serde]
-version = "1.0.101"
-features = ["derive"]
-
-[dev-dependencies]
-[dev-dependencies.cargo-husky]
-version = "1.4.0"
-default-features = false
-features = [
-    "precommit-hook",
-    "run-cargo-clippy",
-    "run-cargo-fmt",
-]
+[dependencies.licensor_common]
+path = "./licensor_common"
