--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,18 @@
 [package]
 name = "licensor"
-version = "1.0.2"
+version = "2.0.0"
 authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
 license = "MIT"
 description = "Write a license to standard output given its SPDX ID"
 homepage = "https://github.com/raftario/licensor"
 repository = "https://github.com/raftario/licensor.git"
 readme = "README.md"
-keywords = ["license", "cli"]
+keywords = [
+    "license",
+    "cli",
+    "spdx",
+    "licensing",
+]
 categories = ["command-line-utilities"]
 edition = "2018"
 
