--- a/licensor_codegen/Cargo.toml
+++ b/licensor_codegen/Cargo.toml
@@ -5,8 +5,6 @@ authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
 edition = "2018"
 
 [dependencies]
+licensor_common = { path = "../licensor_common" }
 phf_codegen = "0.7.24"
 rustfmt = "0.10.0"
-[dependencies.licensor_common]
-path = "../licensor_common"
-features = ["deserialize"]
