--- a/licensor_common/Cargo.toml
+++ b/licensor_common/Cargo.toml
@@ -5,13 +5,7 @@ authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
 edition = "2018"
 
 [dependencies]
+serde_json = "1.0.40"
 [dependencies.serde]
 version = "1.0.101"
 features = ["derive"]
-optional = true
-[dependencies.serde_json]
-version = "1.0.40"
-optional = true
-
-[features]
-deserialize = ["serde", "serde_json"]
