--- a/licensor_fetch/Cargo.toml
+++ b/licensor_fetch/Cargo.toml
@@ -5,13 +5,8 @@ authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
 edition = "2018"
 
 [dependencies]
+flate2 = "1.0.11"
+licensor_common = { path = "../licensor_common" }
 reqwest = "0.9.20"
 sha3 = "0.8.2"
 tar = "0.4.26"
-[dependencies.flate2]
-version = "1.0.11"
-default-features = false
-features = ["rust_backend"]
-[dependencies.licensor_common]
-path = "../licensor_common"
-features = ["deserialize"]
