Slight main refactors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "licensor"
 version = "2.0.0"
 authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
 license = "MIT"
-description = "Write a license to standard output given its SPDX ID"
+description = "write licenses to stdout"
 homepage = "https://github.com/raftario/licensor"
 repository = "https://github.com/raftario/licensor.git"
 readme = "README.md"
