--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Build project
       uses: actions-rs/cargo@v1
       with:
-        command: build --release
+        command: build
+        args: --release
     - name: Strip binary (*nix)
       if: matrix.os != 'windows-latest'
       run: strip target/release/licensor
