--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,15 @@ textwrap = "0.11.0"
 version = "1.0.11"
 default-features = false
 features = ["rust_backend"]
+
+[dev-dependencies]
+[dev-dependencies.cargo-husky]
+version = "1.4.0"
+default-features = false
+features = [
+    "run-for-all",
+    "precommit-hook",
+    "run-cargo-test",
+    "run-cargo-clippy",
+    "run-cargo-fmt",
+]
