--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ default-features = false
 features = ["rust_backend"]
 
 [dev-dependencies]
+assert_cmd = "0.11.1"
+predicates = "1.0.1"
 [dev-dependencies.cargo-husky]
 version = "1.4.0"
 default-features = false
